--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@
 *.la
 *.a
 
+#ignore demo-program output
+/demo-program/*
+!/demo-program/*.*
+#Don't ignore Makefile, ever!
+!/demo-program/Makefile
