Don't add liblongnum_engine.so as dependency of demo-program/*
It make library path being hard-coded in the files.

--- a/demo-program/Makefile
+++ b/demo-program/Makefile
@@ -9,7 +9,7 @@ debug : LDFLAGS := $(LDFLAGS) -g
 $(PROG_C) $(PROG_C++) : CPPFLAGS = -L../library/ -I../library/
 $(PROG_C) $(PROG_C++) : LDLIBS = -llongnum_engine
 
-$(PROG_C) $(PROG_C++) : ../library/liblongnum_engine.so
+#$(PROG_C) $(PROG_C++) : ../library/liblongnum_engine.so
 
 clean :
 	-rm $(PROG_C) $(PROG_C++)
