Edit .gitignore to ignore files auto generated by autotools.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,16 @@
 
 #Ignore temp file from gedit and friends.
 *~
+
+#Ignore autotools auto generate file.
+Makefile.in
+aclocal.m4
+autom4te.cache/
+config.guess
+config.sub
+configure
+depcomp
+install-sh
+ltmain.sh
+m4/
+missing
